# cloud-dataplex

./: .gitignore  CONTRIBUTING.md  README.md
agents/: README.md
agents/policy-as-code/: README.md  pyproject.toml
agents/policy-as-code/docs/: LOW_LEVEL_DETAILS.md
agents/policy-as-code/policy_as_code_agent/: agent.py  config.py  llm_utils.py  mcp.py  memory.py  simulation.py
agents/policy-as-code/policy_as_code_agent/utils/: dataplex.py  gcs.py  json_tools.py  llm.py
agents/policy-as-code/tests/integration/: test_agent.py  test_conversational_flow.py  test_scorecard_flow.py
agents/policy-as-code/tests/unit/: test_dataplex.py  test_dataplex_utils.py  test_llm.py  test_llm_utils.py  test_memory.py  test_security.py  test_utils.py
clouddq-migration/: dataplex.py  lib.py  main.py  permission.py  readme.md  sample_config.yaml
datascan/: README.md
datascan/airflow/: README.md  dataprofile_create_runSync_dag.py  dp_create_runSync_evaluate_dag.py  dp_delete_runSync_dag.py  dq_create_runSync_evaluate_dag.py  dq_fail_scan_if_not_passed_dag.py  dq_runAsync_evaluate_dag.py  dq_runSync_evaluate_config_dag.py
datascan/airflow-dags/: README.md  dq_create_runSync_evaluate_dag.py  dq_fail_scan_if_not_passed_dag.py  dq_runAsync_evaluate_dag.py  dq_runSync_evaluate_config_dag.py
datascan/bulk-creation-scripts/: datascan.py  lib.py  main.py  sample_config.yaml
datascan/dataplex-sample-scripts/: README.md  dq_create_scan.py  dq_export_results_to_bigquery.py  dq_get_job_results.py  dq_run_scan.py
managed-connectivity/: README.md
managed_connectivity/: README.md
(+236 files in other folders)
