[project]
name = "policy-as-code"
version = "0.0.1"
description = "The Policy-as-Code Agent is a generative AI-powered tool that automates data governance."
authors = [{ name = "Vanshaj Bhatia", email = "vanshajbhatia@google.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML==6.0.3",
    "google-adk[eval]==1.21.0",
    "google-cloud-storage==2.19.0",
    "vertexai==1.43.0",
    "google-cloud-dataplex==2.14.0",
    "google-cloud-aiplatform==1.130.0",
    "google-api-python-client==2.186.0",
    "google-cloud-firestore==2.21.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-xdist==3.8.0",
    "pytest-asyncio==1.3.0"
]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "asyncio: mark a test as asyncio.",
]
[tool.pyink]
line-length = 80
pyink-indentation = 4
pyink-use-majority-quotes = true

[tool.agent-starter-pack]
example_question = "All tables must have a DATA_OWNER label."

[tool.agent-starter-pack.settings]
agent_directory = "policy_as_code_agent"
